@@ -22,122 +22,122 @@ data:extend({
     on_animation = {
       layers = {
         {
-          filename = "__Spaghetorio__/graphics/krastorio/entities/biusart-lab/biusart-lab-anim-light.png",
-          width = 75,
-          height = 75,
+          filename = "__Spaghetorio__/graphics/krastorio/entities/biusart-lab/hr-biusart-lab-anim-light.png",
+          width = 75 * 2,
+          height = 75 * 2,
           frame_count = 29,
           line_length = 10,
           animation_speed = 1 / 3,
           shift = { 0, -0.05 },
           draw_as_light = true,
-          scale = 2 * 0.64,
+          scale = 0.64,
         },
         {
-          filename = "__Spaghetorio__/graphics/krastorio/entities/biusart-lab/biusart-lab-anim.png",
-          width = 75,
-          height = 75,
+          filename = "__Spaghetorio__/graphics/krastorio/entities/biusart-lab/hr-biusart-lab-anim.png",
+          width = 75 * 2,
+          height = 75 * 2,
           frame_count = 29,
           line_length = 10,
           animation_speed = 1 / 3,
           shift = { 0, -0.05 },
-          scale = 2 * 0.64,
+          scale = 0.64,
         },
         {
-          filename = "__Spaghetorio__/graphics/krastorio/entities/biusart-lab/biusart-lab-anim.png",
-          width = 75,
-          height = 75,
+          filename = "__Spaghetorio__/graphics/krastorio/entities/biusart-lab/hr-biusart-lab-anim.png",
+          width = 75 * 2,
+          height = 75 * 2,
           frame_count = 29,
           line_length = 10,
           animation_speed = 1 / 3,
           shift = { 0, -0.05 },
-          scale = 2 * 0.64,
+          scale = 0.64,
         },
         {
-          filename = "__Spaghetorio__/graphics/krastorio/entities/biusart-lab/biusart-lab-anim.png",
-          width = 75,
-          height = 75,
+          filename = "__Spaghetorio__/graphics/krastorio/entities/biusart-lab/hr-biusart-lab-anim.png",
+          width = 75 * 2,
+          height = 75 * 2,
           frame_count = 29,
           line_length = 10,
           animation_speed = 1 / 3,
           shift = { 0, -0.05 },
-          scale = 2 * 0.64,
+          scale = 0.64,
         },
         {
-          filename = "__Spaghetorio__/graphics/krastorio/entities/biusart-lab/biusart-lab-light-anim.png",
-          width = 75,
-          height = 75,
+          filename = "__Spaghetorio__/graphics/krastorio/entities/biusart-lab/hr-biusart-lab-light-anim.png",
+          width = 75 * 2,
+          height = 75 * 2,
           frame_count = 29,
           line_length = 10,
           animation_speed = 1 / 3,
           shift = { 0, -0.05 },
-          scale = 2 * 0.64,
+          scale = 0.64,
           blend_mode = "additive-soft",
         },
         {
-          filename = "__Spaghetorio__/graphics/krastorio/entities/biusart-lab/biusart-lab-light-anim.png",
-          width = 75,
-          height = 75,
+          filename = "__Spaghetorio__/graphics/krastorio/entities/biusart-lab/hr-biusart-lab-light-anim.png",
+          width = 75 * 2,
+          height = 75 * 2,
           frame_count = 29,
           line_length = 10,
           animation_speed = 1 / 3,
           shift = { 0, -0.05 },
           draw_as_light = true,
-          scale = 2 * 0.64,
+          scale = 0.64,
           blend_mode = "additive-soft",
         },
         {
-          filename = "__Spaghetorio__/graphics/krastorio/entities/biusart-lab/biusart-lab-shadow.png",
-          width = 120,
-          height = 120,
+          filename = "__Spaghetorio__/graphics/krastorio/entities/biusart-lab/hr-biusart-lab-shadow.png",
+          width = 120 * 2,
+          height = 120 * 2,
           frame_count = 1,
           line_length = 1,
           repeat_count = 29,
           animation_speed = 1,
           shift = { 0, -0.20 },
-          scale = 2 * 0.75,
+          scale = 0.75,
           draw_as_shadow = true,
         },
         {
-          filename = "__Spaghetorio__/graphics/krastorio/entities/biusart-lab/biusart-lab-ao.png",
-          width = 110,
-          height = 110,
+          filename = "__Spaghetorio__/graphics/krastorio/entities/biusart-lab/hr-biusart-lab-ao.png",
+          width = 110 * 2,
+          height = 110 * 2,
           frame_count = 1,
           repeat_count = 29,
           animation_speed = 1 / 3,
           shift = { 0, -0.05 },
-          scale = 2 * 0.50,
+          scale = 0.50,
         },
       },
     },
     off_animation = {
       layers = {
         {
-          filename = "__Spaghetorio__/graphics/krastorio/entities/biusart-lab/biusart-lab.png",
-          width = 75,
-          height = 75,
+          filename = "__Spaghetorio__/graphics/krastorio/entities/biusart-lab/hr-biusart-lab.png",
+          width = 75 * 2,
+          height = 75 * 2,
           frame_count = 1,
           shift = { 0, -0.05 },
-          scale = 2 * 0.64,
+          scale = 0.64,
         },
         {
-          filename = "__Spaghetorio__/graphics/krastorio/entities/biusart-lab/biusart-lab-shadow.png",
-          width = 120,
-          height = 120,
+          filename = "__Spaghetorio__/graphics/krastorio/entities/biusart-lab/hr-biusart-lab-shadow.png",
+          width = 120 * 2,
+          height = 120 * 2,
           frame_count = 1,
           repeat_count = 1,
           shift = { 0, -0.20 },
-          scale = 2 * 0.75,
+          scale = 0.75,
           draw_as_shadow = true,
         },
         {
-          filename = "__Spaghetorio__/graphics/krastorio/entities/biusart-lab/biusart-lab-ao.png",
-          width = 110,
-          height = 110,
+          filename = "__Spaghetorio__/graphics/krastorio/entities/biusart-lab/hr-biusart-lab-ao.png",
+          width = 110 * 2,
+          height = 110 * 2,
           frame_count = 1,
           repeat_count = 1,
           animation_speed = 1 / 3,
           shift = { 0, -0.05 },
-          scale = 2 * 0.5,
+          scale = 0.5,
         },
       },
     },
